samples/_failures_safe/1761496550_b442d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9605960.c: In function ‘main’:
./samples/SAFE/__tmp_b9605960.c:172:16: error: expected ‘)’ at end of input
  172 |     if (!tokens
      |        ~       ^
      |                )
./samples/SAFE/__tmp_b9605960.c:172:5: error: expected declaration or statement at end of input
  172 |     if (!tokens
      |     ^~
